[project]
name = "bus-booking-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "fastapi==0.115.5",
    "psycopg2-binary==2.9.10",
    "pydantic[email]==2.10.3",
    "pydantic-settings==2.6.1",
    "ruff>=0.15.6",
    "sqlalchemy==2.0.36",
    "uvicorn[standard]==0.32.1",
    "python-jose[cryptography]==3.3.0",
    "bcrypt==4.2.1",
    "faststream[rabbit]==0.6.7",
    "redis==5.2.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    "aiosqlite==0.20.0",
]
